docs: add CHANGELOG, CONTRIBUTING, and overhaul README for Maven Central